--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.0",
     "react-bootstrap": "^2.0.0-beta.5",
     "react-dom": "^17.0.0",
+    "react-hook-form": "^7.15.1",
     "react-query": "^3.21.1",
     "react-router-dom": "^5.2.1",
     "react-spinners": "^0.11.0",
